Se creo el menu para crear nuevos productos y se modifico la tabla products de sql, falta desarrollo