@@ -13,6 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.release>21</maven.compiler.release>
+        <exec.vmArgs>--enable-native-access=ALL-UNNAMED</exec.vmArgs>
     </properties>
 
     <dependencies>
@@ -86,15 +87,14 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <configuration>
-                    <mainClass>com.danieljoaco.storeapp.Main</mainClass>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>${exec.vmArgs}</argument>
+                        <argument>-classpath</argument>
+                        <classpath/>
+                        <argument>com.danieljoaco.storeapp.Main</argument>
+                    </arguments>
                 </configuration>
             </plugin>
 
